kubernetes/apps/services/mushroom-finder/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushroom-finder
  namespace: services
  labels:
    app: mushroom-finder
spec:
  selector:
    app: mushroom-finder
  ports:
    - name: http
      port: 80
      targetPort: http
